--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^7.2.0",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "geolib": "^3.3.4",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
