--- a/appflow.config.json
+++ b/appflow.config.json
@@ -3,7 +3,7 @@
     {
       "appId": "c8dda030",
       "dependencyInstallCommand": "yarn install",
-      "webBuildCommand": "quasar build -m capacitor -T android",
+      "webBuildCommand": "yarn quasar build -m capacitor -T android",
       "androidPath": "src-capacitor/android"
     }
   ]
