--- a/appflow.config.json
+++ b/appflow.config.json
@@ -2,10 +2,9 @@
   "apps": [
     {
       "appId": "c8dda030",
-      "dependencyInstallCommand": "yarn install",
-      "webBuildCommand": "quasar build -m capacitor -T android",
-      "androidPath": "src-capacitor/android",
-      "prebuildCommand": "yarn global add @quasar/cli"
+      "root": "src-capacitor",
+      "dependencyInstallCommand": "cd .. && yarn install",
+      "webBuildCommand": "cd .. && yarn quasar build -m capacitor -T android --skip-pkg"
     }
   ]
 }
